--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 # Gambas Project File 3.0
 Title=ShmMem
-Startup=Conversion
+Startup=NativeArrays
 Version=2.1.11
 Component=gb.eval
 Description="This provides an interface to the Linux Shared memory functions. Allowing the creation and sharing of shared memory segments across any number of local applications or tasks. Added A gambas script to graphically monitor the Shared Memory.\n\nExtended Array, with toCvs FromCvs, import, export, redim, and copy\n\nUpdated Buf fixes, lists and Arrays\n\nUpdated to add static arrays of variant values max 10 dimensions.\n\nUpdated such that array,list ans queues can be access by tag name.\n\nUpdated to by default use locks for all lists/queues. Lock are localized to the specific list or queue being changed.\n\nTo do this it implements  an interface which allows any valid gambas object or variable to be directly stored or accessed via the interface\n\nexample::\nPublic Sub Main()\nMyShm = new ShmMem\n\nWith MyShm\n\n !a = \"this\"\n !b = 1\n\nprint !a, !b\n\nend with\nend"
