--- a/.settings
+++ b/.settings
@@ -1,9 +1,10 @@
 [Bookmarks]
 shmMem=[234]
 ShmNotifyEntry=[54]
+ShmArray=[]
 
 [Debug]
-Breakpoints={"ShmListVariables":[18],"NativeArrays":[8],"Demo_ArrayFunctions":[63],"Conversion":[9],"ShmArray":[908,928,926]}
+Breakpoints={"ShmListVariables":[18],"NativeArrays":[10],"Conversion":[9],"shmMem":[135,129],"BasicValues":[29]}
 UseTerminal=False
 RedirectStderr=False
 UseHttpServer=False
@@ -42,7 +43,7 @@ Geometry=[2331,570,544,386]
 Geometry=[2345,547,252,504]
 
 [DebugWindow/Dims]
-Geometry=[2081,540,252,276]
+Geometry=[834,512,252,56]
 
 [DebugWindow/Elements]
 Geometry=[834,288,627,508]
@@ -93,10 +94,13 @@ Geometry=[834,498,252,58]
 Geometry=[834,512,252,56]
 
 [DebugWindow/MyMem]
-Geometry=[2139,713,252,100]
+Geometry=[2302,498,252,316]
+
+[DebugWindow/MyMem!a]
+Geometry=[834,512,252,56]
 
 [DebugWindow/MyMem["a"]]
-Geometry=[2716,479,252,310]
+Geometry=[2153,547,252,504]
 
 [DebugWindow/MyMem["list"]]
 Geometry=[2716,479,252,504]
@@ -315,10 +319,16 @@ Geometry=[834,498,252,508]
 Geometry=[834,402,639,327]
 
 [DebugWindow/b]
-Geometry=[834,498,252,58]
+Geometry=[834,498,252,508]
 
 [DebugWindow/b.Bounds]
 Geometry=[2081,329,252,504]
+
+[DebugWindow/b[15]]
+Geometry=[2300,278,252,150]
+
+[DebugWindow/b[2]]
+Geometry=[2300,278,252,150]
 
 [DebugWindow/bb]
 Geometry=[2165,363,526,470]
@@ -348,7 +358,28 @@ Geometry=[2734,458,252,508]
 Geometry=[2754,355,667,466]
 
 [DebugWindow/d]
-Geometry=[834,371,730,310]
+Geometry=[2754,498,252,56]
+
+[DebugWindow/d[0]]
+Geometry=[848,512,252,110]
+
+[DebugWindow/d[116]]
+Geometry=[2252,219,445,196]
+
+[DebugWindow/d[15]]
+Geometry=[848,512,252,110]
+
+[DebugWindow/d[1]]
+Geometry=[848,512,252,110]
+
+[DebugWindow/d[2]]
+Geometry=[2155,333,252,150]
+
+[DebugWindow/d[5]]
+Geometry=[848,512,252,110]
+
+[DebugWindow/d[8]]
+Geometry=[848,385,252,90]
 
 [DebugWindow/dimset]
 Geometry=[834,498,252,56]
@@ -416,6 +447,9 @@ Geometry=[848,526,549,405]
 [DebugWindow/me.Key_dlist]
 Geometry=[2158,799,252,56]
 
+[DebugWindow/mem]
+Geometry=[2163,252,707,412]
+
 [DebugWindow/mylist]
 Geometry=[2143,386,252,56]
 
@@ -427,6 +461,9 @@ Geometry=[834,512,252,56]
 
 [DebugWindow/newlist.ListHead]
 Geometry=[834,512,252,56]
+
+[DebugWindow/nvalue]
+Geometry=[834,292,252,504]
 
 [DebugWindow/pEntry]
 Geometry=[2754,388,479,329]
@@ -561,20 +598,21 @@ Diagonals=0
 Lock=False
 
 [FProjectVersion]
-LastCommit="Added New features for array, tocvs, from cvs, import export, copy\n\n* New: ToCvs and FromCvs for 2d arrays\n* New: Export and Import for any dimension arrays - exports as text \n* New: Copy, produces a deep copy of the array"
+LastCommit="Complete Auto conversion of Gambas array to ShmArray.\n\n* opt: modify Array to correctly display debuger interface\n* New: Add conversion from Gambas Array to ShmArray"
 
 [OpenFile]
-Count=3
-File[1]=".src/ShmMem/ShmArray.class:3.928"
-File[2]=".src/Examples/vTestApps/Array Tests/Conversion.module:13.9"
-File[3]=".src/ShmMem/ShmList.class:9.120"
-Active=1
+Count=4
+File[1]=".src/ShmMem/shmMem.class:30.163"
+File[2]=".src/Examples/Demo/Demo_user1.module:31.69"
+File[3]=".src/Examples/Demo/Demo_ArrayFunctions.module:0.64"
+Active=4
+File[4]=".src/ShmMem/ShmList.class:44.1119"
 
 [Package]
 Dir="~/Projects/Distribution/ShmMem/"
 
 [Watches]
-Count=7
+Count=10
 Watch[1]="param"
 Watch[2]="me"
 Watch[3]="notifyqueue[0]"
@@ -582,4 +620,7 @@ Watch[4]="error.text"
 Watch[5]="application.id"
 Watch[6]="params"
 Watch[7]="param.all"
+Watch[8]="MyMem!a"
+Watch[9]="mymem!a[1,1,1]"
+Watch[10]="a[1,1,1]"
 
