Fix Bug With ShmValue, forgot to implement UsrPtr static function
* New: Added userPtr static function to ShmValue
* New: When Reading a Shm class then look at signature and locate then memory, otherwise use default
* New: generate error identifying the forgotten required functions

--- a/.project
+++ b/.project
@@ -17,14 +17,14 @@ Url=https://github.com/justlostintime
 License=General Public License
 Prefix=1
 PackageName=gambas3-gb-shmmem-2.1.16
-PackageVersion=6
+PackageVersion=7
 CreateEachDirectory=1
 RuntimeVersion="3.18"
 Packager=1
 Systems=archlinux,autotools,debian,fedora,mageia,slackware,suse,ubuntu
 SameDependencies=1
 SameFiles=1
-Groups=archlinux:"libs"
+Groups=archlinux:"libdevel"
 Groups=debian:"libs"
 Groups=fedora:"Development/Libraries"
 Groups=mageia:"System/Libraries"
