Updated such that shm classes new from a file works correctly n = new shmxxx(source as stream)
* New: Added ability to create a shm class directly from a file source

--- a/.project
+++ b/.project
@@ -8,7 +8,7 @@ Authors="JustLostInTime, Westwood"
 TabSize=4
 Translate=1
 Language=en_US
-Type=Component
+Type=Library
 ForceBytecodeVersion=3.18
 Maintainer=brian
 Vendor=Westwood
