--- a/.settings
+++ b/.settings
@@ -13,10 +13,7 @@ Profiling=False
 Environment=["GB_NO_JIT=1"]
 
 [DebugWindow]
-Count=3
-DebugWindow[1]="b"
-DebugWindow[2]="b[0]"
-DebugWindow[3]="bc"
+Count=0
 
 [DebugWindow/ArrayData]
 Geometry=[834,512,252,58]
@@ -237,6 +234,9 @@ Geometry=[848,512,252,276]
 [DebugWindow/Result[4]]
 Geometry=[848,512,252,276]
 
+[DebugWindow/RetList]
+Geometry=[834,402,605,336]
+
 [DebugWindow/SemaData]
 Geometry=[834,512,252,58]
 
@@ -349,7 +349,7 @@ Geometry=[848,402,252,150]
 Geometry=[834,402,639,327]
 
 [DebugWindow/b]
-Geometry=[2282,325,592,508]
+Geometry=[834,512,252,508]
 
 [DebugWindow/b.ArrayData]
 Geometry=[848,512,252,110]
@@ -397,7 +397,7 @@ Geometry=[834,451,607,150]
 Geometry=[848,465,252,150]
 
 [DebugWindow/b[0]]
-Geometry=[2070,91,252,170]
+Geometry=[834,512,252,58]
 
 [DebugWindow/b[15]]
 Geometry=[2300,278,252,150]
@@ -421,7 +421,7 @@ Geometry=[848,402,252,170]
 Geometry=[2165,363,526,470]
 
 [DebugWindow/bc]
-Geometry=[2932,332,603,504]
+Geometry=[834,512,252,508]
 
 [DebugWindow/bc[0]]
 Geometry=[848,402,252,170]
@@ -811,13 +811,12 @@ Diagonals=0
 Lock=False
 
 [FProjectVersion]
-LastCommit="Fix Bug for multi threaded SHMmem class - Dont release MEM from other PIDs\n\n* BUG: Shmmem is releasing memory blocks owned by other PIDs App's->task specific"
+LastCommit="fix _compare issues with value and array types\n\n* BUG: _compare of array and value class bug"
 
 [OpenFile]
-Count=2
-File[1]=".src/Examples/vTestApps/Values/CompareValue.module:10.37"
+Count=1
 Active=1
-File[2]=".src/ShmMem/ShmValue.class:20.113"
+File[1]=".src/Examples/Demo/Demo_user1.module:0.132"
 
 [Package]
 Dir="~/Projects/Distribution/ShmMem/"
